# statgen-essentials-rs

./: Cargo.toml
src/: generics.rs  lib.rs  sim.rs
