[package]
name = "statgen-essentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.15"
rand = "0.8.4"
approx = "*"
ndarray = { version = "0.15", features = ["blas", "approx"] }
blas-src = { version = "*",  default-features=false, features=["netlib"] }
openblas-src = { version = "*", default-features = false, features = ["cblas"] }